<resources>
    <string name="app_name">DIgger</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_login">Login</string>
    <string name="dig">DIGG</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="label_first_name">First Name</string>
    <string name="label_second_name">Second Name</string>
    <string name="label_code">Code</string>
    <string name="submit">Submit</string>
</resources>