<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.digger.ui.RegisterActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04">

        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEndExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/dig"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/tvLogo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_background"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/labelEmail" />


        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_background"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword" />

        <TextView
            android:id="@+id/labelFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/label_first_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_background"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@+id/labelFirstName" />

        <TextView
            android:id="@+id/labelSecondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/label_second_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

        <EditText
            android:id="@+id/et_second_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_background"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@+id/labelSecondName" />

        <TextView
            android:id="@+id/labelCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/label_code"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/et_second_name" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_background"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@+id/labelCode" />

        <TextView
            android:id="@+id/tv_forgetPassword"
            style="@style/Hyperlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/forget_password"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/et_code" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/Hyperlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/tv_forgetPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintTop_toTopOf="@id/tv_forgetPassword" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/OutlinedButtonPrimaryBlueStyleTextMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/register"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>