<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.digger.ui.ForgetPasswordActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStartExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04">

        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEndExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_90sdp"
            android:gravity="center"
            android:text="@string/dig"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/tvLogo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edit_background"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@id/labelEmail" />

        <Button
            android:id="@+id/btnForget"
            style="@style/OutlinedButtonPrimaryBlueStyleTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/submit"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@id/guidelineStartExternal"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEndExternal"
            app:layout_constraintStart_toStartOf="@+id/guidelineStartExternal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>